--- a/JiaoBaoYun-hb/html/homework/workdetail-tea.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea.html
@@ -23,7 +23,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			mui.init();
+//			mui.init();
 		
 			mui.plusReady(function(){
 				var data = plus.webview.currentWebview().data;
