展现主界面添加，我关注的人

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -9,6 +9,7 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/qiuzhi/qiuzhi-sub.css" rel="stylesheet" />
+		<!--<link rel="stylesheet" type="text/css" href="../../css/utils/MUI-pullToRefresh.css" />-->
 	</head>
 
 	<body>
@@ -35,6 +36,8 @@
 		<script src="../../js/mui.min.js"></script>
 		<!--h5刷新-->
 		<script src="../../js/utils/h5fresh.js"></script>
+		<!--<script src="../../js/mui.pullToRefresh.js"></script>
+		<script src="../../js/mui.pullToRefresh.material.js"></script>-->
 		<!--公共方法js-->
 		<script src="../../js/utils/events.js"></script>
 		<!--接口js-->
