求知加参数

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -251,6 +251,7 @@
 						isAnonym: 0, //是否匿名
 						encAddr: TAs.encAddr,
 						thumbnail: TAs.encImg,
+						cutImg:"",
 						inviteExperts: boxesStr //邀请专家,例如[1,2,3]
 					};
 					// 等待的对话框
