--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -31,22 +31,22 @@
 		</header>
 		<!--content-->
 		<div class="mui-content">
+			
 			<!--表单-->
 			<form class="mui-input-group">
 				<div class="mui-input-row">
-					<label>科目:</label>
+					<label>科目</label>
 					<select id="subjects" class="select-subject">
 					</select>
 				</div>
 				<div class="receive-container">
-					<a id="select-classes" class="mui-pull-right select-classes mui-icon mui-icon-arrowright"></a>
 					<label>接收人</label>
 					<div id="classes" class="receive-classes">
 					</div>
-
+					<a id="select-classes" class="select-classes mui-icon mui-icon-arrowright"></a>
 				</div>
 				<div class="input-erea">
-					<textarea id="publish-content" type="text" maxlength="500" placeholder="输入你要布置的作业内容,最多500字！"></textarea>
+					<textarea id="publish-content" class="publish-content" type="text" maxlength="500" placeholder="输入你要布置的作业内容,最多500字！"></textarea>
 					<!--一期隐藏拍照、相机、录音功能-->
 					<div class="publish-extras">
 						<!--<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>-->
@@ -55,8 +55,8 @@
 						<a id="get_gallery" class="mui-icon iconfont icon-xiangce"></a>
 					</div>
 				</div>
-				<div class="mui-input-row">
-					<label class="submit-label">需学生在线提交</label>
+				<div class="online-container">
+					<p class="submit-label">需学生在线提交</p>
 					<div id="onlineSwitch" class="mui-switch mui-active mui-switch-green online-switch">
 						<div class="mui-switch-handle"></div>
 					</div>
