用户空间详情

--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -660,7 +660,34 @@
 						getFocusByUser();
 					}
 				})
+			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 
+				var toast = '';
+				mui.each(click, function(index, element) {
+					toast = toast + element;
+				});
+				var id = this.getAttribute('id');
+
+				click.push(id);
+				//								mui.toast('li-id:' + click[click.length - 1] + '-' + toast);
+				click = [];
+			});
+			mui('.mui-table-view').on('tap', '.question_content', function() {
+
+				var toast = '';
+				mui.each(click, function(index, element) {
+					toast = toast + element;
+				});
+				var id = this.getAttribute('id');
+				var cityID = sliderId.replace('top_','');
+				var index = this.id.replace('question_content'+cityID+'zx','');
+				zonepArray[index].focusFlag = 1;
+				
+				events.openNewWindowWithData('../quan/space-detail.html', zonepArray[index])
+				click.push(id);
+				//								mui.toast('li-id:' + click[click.length - 1] + '-' + toast);
+				click = [];
+			});
 				//			评论
 				mui('#sliderGroup').on('tap', '.dynamic-icon-comment', function() {
 					//				click.push('评论');
